--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     //Glide (image loading framework)
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //convert java object to Json
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
